--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @clubs.each do |club| %>
       <tr>
-        <td><%= club.type %></td>
+        <td><%= club.club_type %></td>
         <td><%= club.name %></td>
         <td><%= club.members %></td>
         <td><%= club.description %></td>
