--- a/app/views/user_clubs/index.html.erb
+++ b/app/views/user_clubs/index.html.erb
@@ -3,7 +3,6 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
       <th>Club</th>
       <th>Join date</th>
       <th colspan="3"></th>
@@ -13,8 +12,10 @@
   <tbody>
     <% @user_clubs.each do |user_club| %>
       <tr>
-        <td><%= user_club.user_id %></td>
-        <td><%= user_club.club_id %></td>
+        <td>
+          <% @club = Club.find(user_club.club_id) %>
+          <%= link_to "#{@club.name}", {:controller => "clubs", :action => "show", :id => @club.id }%>
+        </td>
         <td><%= user_club.join_date %></td>
         <td><%= link_to 'Show', user_club %></td>
         <td><%= link_to 'Edit', edit_user_club_path(user_club) %></td>
