--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -20,18 +20,13 @@
       </p>
 
       <p>
-        <strong>Members:</strong>
-        <%= @club.members %>
-      </p>
-
-      <p>
         <strong>Description:</strong>
         <%= @club.description %>
       </p>
 
       <p>
-        <strong>Activity:</strong>
-        <%= @activity.activity_type %>
+        <strong>Sport:</strong>
+        <%= @club.sport %>
       </p>
 
       <p>
