--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -5,9 +5,8 @@
     <tr>
       <th>Type</th>
       <th>Name</th>
-      <th>Members</th>
       <th>Description</th>
-      <th>Activity</th>
+      <th>Sport</th>
       <th>Place</th>
       <th colspan="3"></th>
     </tr>
@@ -18,10 +17,9 @@
       <tr>
         <td><%= club.club_type %></td>
         <td><%= club.name %></td>
-        <td><%= club.members %></td>
         <td><%= club.description %></td>
-        <td><%= club.activity_id %></td>
-        <td><%= club.place_id %></td>
+        <td><%= club.sport %></td>
+        <td><%= club.place.district %></td>
         <td><%= link_to 'Show', club %></td>
         <td><%= link_to 'Edit', edit_club_path(club) %></td>
         <td><%= link_to 'Destroy', club, method: :delete, data: { confirm: 'Are you sure?' } %></td>
