Added final funcionalities

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -39,7 +39,7 @@
         <table>
           <thead>
             <tr>
-              <th> <%= sortable "activity_ype" %></th>
+              <th> <%= sortable "activity_type" %></th>
               <th> <%= sortable "title" %></th>
               <th> <%= sortable "date" %></th>
               <th> <%= sortable "start" %></th>
